<resources>
    <string name="app_filter_class">com.syu.car.CustomFilter</string>
    <string name="application_name">Launcher Mod</string>
    <string name="home">Home</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name" />
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="wallpaper_accessibility_name">Wallpaper %1$d of %2$d</string>
    <string name="announce_selection">Selected %1$s</string>
    <string name="wallpaper_delete">Delete</string>
    <string name="pick_image">Pick image</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="crop_wallpaper">Crop wallpaper</string>
    <string name="activity_not_found">"App isn't installed."</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="widget_adder">Widgets</string>
    <string name="toggle_weight_watcher">Show Mem</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="widget_dims_format">%1$d × %2$d</string>
    <string name="external_drop_widget_pick_format">%1$s (%2$d × %3$d)</string>
    <string name="external_drop_widget_error">"Couldn't drop item on this Home screen."</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="completely_out_of_space">No more room on your Home screens.</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room on the hotseat.</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat.</string>
    <string name="shortcut_installed">Shortcut \"%s\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"%s\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"%s\" already exists.</string>
    <string name="title_select_shortcut">Choose shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="help_url" />
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">"This is a system app and can't be uninstalled."</string>
    <string name="dream_name">Rocket Launcher</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="workspace_description_format">Home screen %1$d</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="first_run_cling_title">Welcome!</string>
    <string name="first_run_cling_description">Make yourself at home.</string>
    <string name="first_run_cling_custom_content_hint" />
    <string name="first_run_cling_search_bar_hint" />
    <string name="first_run_cling_create_screens_hint">Create more screens for apps and folders</string>
    <string name="workspace_cling_title">Organize your space</string>
    <string name="workspace_cling_move_item">Touch &amp; hold background to manage wallpaper, widgets and settings.</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_cling_add_item">To add an app to your Home screen, touch &amp; hold it.</string>
    <string name="folder_cling_title">"Here's a folder"</string>
    <string name="folder_cling_create_folder">To create one like this, touch &amp; hold an app, then move it over another.</string>
    <string name="cling_dismiss">OK</string>
    <string name="dummy_custom_cling_error_message">Error: custom workspace layout passed in but custom cling was not overwritten</string>
    <string name="folder_opened">Folder opened, %1$d by %2$d</string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to %1$s</string>
    <string name="folder_name_format">Folder: %1$s</string>
    <string name="custom_workspace_cling_title_1" />
    <string name="custom_workspace_cling_description_1" />
    <string name="custom_workspace_cling_title_2" />
    <string name="custom_workspace_cling_description_2" />
    <string name="debug_memory_activity">* HPROF</string>
    <string name="widget_button_text">Widgets</string>
    <string name="livewallpaper_button_text">Live Wallpapers</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Settings</string>
    <string name="no_app_msg">请修改车载设置中“选择导航应用”选项。</string>
    <string name="no_tv_msg">No TV device!</string>
    <string name="car_aux">AUX</string>
    <string name="car_tv">TV</string>
    <string name="car_dvr">DVR</string>
    <string name="car_steer">Steer</string>
    <string name="car_speech">Voice</string>
    <string name="car_setting">Car Setting</string>
    <string name="car_wallpaper">Wallpapers</string>
    <string name="car_video">Video</string>
    <string name="car_dvd">DVD</string>
    <string name="car_radio">Radio</string>
    <string name="car_music">Music</string>
    <string name="car_bt">Bluetooth</string>
    <string name="car_carlife">CarLife</string>
    <string name="music_unknown">Unknown</string>
    <string name="car_bt_music">Bt Music</string>
    <string name="car_app">Apps</string>
    <string name="car_eq">EQ</string>
    <string name="car_temp">Temp</string>
    <string name="car_weather">Weather</string>
    <string name="car_city">City</string>
    <string name="car_wind_direction">Wind Direction</string>
    <string name="car_temprange">Temp Range</string>
    <string name="sys_settings">Settings</string>
    <string name="music_name">Song</string>
    <string name="music_author">Author</string>
    <string name="music_album">Album</string>
    <string name="car_link">E-CARLINK</string>
    <string name="date_str_format">yyyy/MM/dd</string>
    <string name="car_settings">Settings</string>
    <string name="car_navi">Navi</string>
    <string name="easy_conn">null</string>
    <string name="car_gaode">Auto Navi</string>
    <string name="car_kuwo">Kuwo Music</string>
    <string name="car_klfm">Koala FM</string>
    <string name="car_unicar">Flow Recharge</string>
    <string name="car_gallery">Picture</string>
    <string name="car_file">File</string>
    <string name="car_voice">Voice</string>
    <string name="car_recharge">Recharge</string>
    <string name="car_car">Car</string>
    <string name="car_easyconn">Easyconn</string>
    <string name="car_browser">Browser</string>
    <string name="car_miu_drive">喵驾</string>
    <string name="am">AM</string>
    <string name="layout_type">Layout type</string>
    <string name="user_layout">User layout</string>
    <string name="stock_layout">Stock layout</string>
    <string name="layout_creator">LAYOUT CREATOR</string>
    <string name="fyt_title_source">Fyt music title source</string>
    <string name="fyt_metadata">From metadata</string>
    <string name="fyt_file">From file path</string>
    <string name="left_bar">Use left bar</string>
    <string name="left_bar_on">Left bar + bottom bar</string>
    <string name="left_bar_off">Only bottom bar</string>
    <string name="date_widget">Date and time widget</string>
    <string name="music_widget">Music widget</string>
    <string name="radio_widget">Radio widget</string>
    <string name="margins_str">Margins (max. 25)</string>
    <string name="transparent_statusbar">Transparent status bar</string>
    <string name="stats_window">Fuel statistics</string>
    <string name="stats_dialog_title">Canbus codes:</string>
    <string name="fuel_code_text">Fuel code:</string>
    <string name="range_code_text">Range code:</string>
    <string name="cmdInt_code_text">cmdInt code:</string>
    <string name="cmdArr_code_text">cmdArr code:</string>
    <string name="canbus_optional"><b>Optional data (should be 0 if not used):</b></string>
    <string name="canbus_optional_description">Use that if your canbus stops sending fuel consumption data i.e. below some speed level.</string>
    <string name="rpm_code_text">RPM canbus code:</string>
    <string name="horse_power_code_text">Horsepower:</string>
    <string name="vehicle_mass_code_text">Vehicle mass (in kg):</string>
    <string name="color_picker">Statistics text color</string>
    <string name="stats_bg">Statistics background</string>
    <string name="bg_drawable">Default background</string>
    <string name="bg_color">Colored background</string>
    <string name="bg_color_picker">Set the background color</string>
    <string name="code_logger_data">Initial reading data</string>
    <string name="starting_cmd_int_text">Starting cmdInt (max. 1198):</string>
    <string name="starting_cmd_arr_text">Starting cmdArr (max. 1198):</string>
    <string name="max_cmd_int_text">Max cmdInt (max. 1199):</string>
    <string name="max_cmd_arr_text">Max cmdArr (max. 1199):</string>
    <string name="code_logger_timeout_text">Time window:</string>
    <string name="code_inspector_data">Detailed reading data</string>
    <string name="inspector_cmd_int_text">cmdInt (max. 1198):</string>
    <string name="inspector_cmd_arr_text">cmdArr (max. 1199):</string>
    <string name="code_inspector_timeout_text">Timeout:</string>
</resources>