<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@id/preferences" >
    <SwitchPreference
        android:key="left_bar"
        android:defaultValue="false"
        android:title="@string/left_bar"
        android:summaryOn="@string/left_bar_on"
        android:summaryOff="@string/left_bar_off" />
    <SwitchPreference
        android:key="user_date"
        android:defaultValue="true"
        android:title="@string/date_widget" />
    <SwitchPreference
        android:key="user_music"
        android:defaultValue="true"
        android:title="@string/music_widget" />
    <SwitchPreference
        android:key="user_radio"
        android:defaultValue="false"
        android:title="@string/radio_widget" />
    <SwitchPreferenceCompat
        android:key="user_stats"
        android:defaultValue="false"
        android:title="@string/stats_window"
        android:maxLines="5" />
    <Preference
        android:key="color_picker"
        android:title="@string/color_picker" />
    <SwitchPreference
        android:key="stats_bg"
        android:defaultValue="true"
        android:title="@string/stats_bg" />
    <SwitchPreferenceCompat
        android:key="bg_drawable"
        android:defaultValue="true"
        android:title="@string/bg_drawable" />
    <SwitchPreferenceCompat
        android:key="bg_color"
        android:defaultValue="false"
        android:title="@string/bg_color" />
    <Preference
        android:key="bg_color_picker"
        android:title="@string/bg_color_picker" />
    <Preference
        android:key="layout_margin"
        android:title="@string/margins_str"
        android:summary="10" />
    <Preference
        android:key="launcher_creator_second"
        android:title="@string/open_creator"
        android:summary="@string/open_creator_summary" />
</PreferenceScreen>