<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout 
        android:id="@+id/constraint_inspector"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_inspector"            
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <!-- Title -->
        <TextView
            android:id="@+id/code_inspector_data_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_inspector_data"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- CMD Int Row -->
        <TextView
            android:id="@+id/inspector_cmd_int_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspector_cmd_int_text"
            app:layout_constraintTop_toBottomOf="@id/code_inspector_data_title"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/inspector_cmd_int"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline_inspector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/inspector_cmd_int_text" />

        <!-- CMD Arr Row -->
        <TextView
            android:id="@+id/inspector_cmd_arr_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspector_cmd_arr_text"
            app:layout_constraintTop_toBottomOf="@id/inspector_cmd_int_text"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/inspector_cmd_arr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline_inspector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/inspector_cmd_arr_text" />

        <!-- Timeout Row -->
        <TextView
            android:id="@+id/code_inspector_timeout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_inspector_timeout_text"
            app:layout_constraintTop_toBottomOf="@id/inspector_cmd_arr_text"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/code_inspector_timeout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline_inspector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/code_inspector_timeout_text"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>