<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <TextView
            android:id="@+id/canbus_optional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canbus_optional"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />        

        <TextView
            android:id="@+id/canbus_optional_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canbus_optional_description"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:maxLines="5" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="fill_parent"
                android:layout_marginTop="16dp" >

                <TextView
                    android:id="@+id/rpm_code_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rpm_code_text"
                    android:textSize="14sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/rpm_code_int"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" >

                <TextView
                    android:id="@+id/horse_power_code_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horse_power_code_text"
                    android:textSize="14sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/horse_power_code_int"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" >

                <TextView
                    android:id="@+id/vehicle_mass_code_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_mass_code_text"
                    android:textSize="14sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/vehicle_mass_code_int"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" >

                <TextView
                    android:id="@+id/engine_volume_code_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/engine_volume_code_text"
                    android:textSize="14sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/engine_volume_code_int"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" >

                <TextView
                    android:id="@+id/cylinders_number_code_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cylinders_number_code_text"
                    android:textSize="14sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/cylinders_number_code_int"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>